--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </button>
             </div>
             <div id="socials-container">
-                <img src="./assets/in.png" alt="My LinkedIn profile" class="icon linkedin-dark-mode"
+                <img src="./assets/in1.png" alt="My LinkedIn profile" class="icon linkedin-dark-mode"
                     onclick="location.href='https://www.linkedin.com/in/mayura-patkar-14306a2b1/'" />
                 <img src="./assets/github.png" alt="My Github profile" class="icon github-dark-mode"
                     onclick="location.href='https://github.com/Mayur68'" />
@@ -197,12 +197,10 @@
                     <h2 class="experience-sub-title project-title">Shape Recognition model</h2>
                     <p>A simple NL model and a python server.</p>
                     <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Mayur68/Shape-Recognition-model'">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/Mayur68/Shape-Recognition-model'">
                             Github
                         </button>
-                        <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
-                            Live Demo
-                        </button> -->
                     </div>
                 </div>
             </div>
@@ -216,11 +214,11 @@
                 <p><a href="mailto:mayurpatkar68@gmaul.com">mayurpatkar68@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/in.png" alt="LinkedIn icon" class="icon contact-icon linkedin2-dark-mode" />
+                <img src="./assets/in1.png" alt="LinkedIn icon" class="icon contact-icon linkedin2-dark-mode" />
                 <p><a href="https://www.linkedin.com/in/mayura-patkar-14306a2b1/">LinkedIn</a></p>
             </div>
             <div class="contact-info-container">
-                <img src="./assets/X.png" alt="LinkedIn icon" class="icon contact-icon x-dark-mode" />
+                <img src="./assets/X1.png" alt="LinkedIn icon" class="icon contact-icon x-dark-mode" />
                 <p><a href="https://x.com/mayurpatkar68?t=x81TllvAZ9pmkAUm9z53ag&s=08">X</a></p>
             </div>
         </div>
