--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/bitbliss.jpg" alt="Project 1" class="project-img" />
+                        <img src="./assets/BitBliss.jpg" alt="Project 1" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">BitBliss</h2>
+                    <h2 class="experience-sub-title project-title">BitBliss - A Web App</h2>
                     <p>A WebApp using NodeJS, MongoDB.</p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
@@ -187,6 +187,19 @@
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://bitbliss.onrender.com'">
                             Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/image0.jpg" alt="Project 1" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Machine Learning Models</h2>
+                    <p>Machine Learning Models</p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/Mayur68/Machine-learning-Models'">
+                            Github
                         </button>
                     </div>
                 </div>
