--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/BitBliss.jpg" alt="Project 1" class="project-img" />
+                        <img src="./assets/bitbliss.jpg" alt="Project 1" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">BitBliss - A Web App</h2>
                     <p>A WebApp using NodeJS, MongoDB.</p>
