--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <article>
                             <div>
                                 <h3>AI</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
@@ -243,7 +243,7 @@
                 </ul>
             </div>
         </nav>
-        <p>Copyright &#169; 2024 Mayur. All Rights Reserved.</p>
+        <p>Copyright &#169; 2024 Mayura. All Rights Reserved.</p>
     </footer>
 </body>
 <script src="./script.js"></script>
