--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="./assets/in1.png" alt="My LinkedIn profile" class="icon linkedin-dark-mode"
                     onclick="location.href='https://www.linkedin.com/in/mayura-patkar-14306a2b1/'" />
                 <img src="./assets/github.png" alt="My Github profile" class="icon github-dark-mode"
-                    onclick="location.href='https://github.com/Mayur68'" />
+                    onclick="location.href='https://github.com/Mayura01'" />
             </div>
         </div>
     </section>
@@ -95,39 +95,50 @@
                     <h2 class="skills-sub-title">Programming Languages</h2>
                     <div class="article-container">
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/python-logo.png" alt="python" class="icon"
+                                    onclick="location.href='https://www.python.org/'" />
+                            </dv>
                             <div>
                                 <h3>Python</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
-                            <div>
-                                <h3>JAVA</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
+                            <dv class="logo">
+                                <img src="./assets/javascript.png" alt="javascript" class="icon" />
+                            </dv>
                             <div>
                                 <h3>JavaScript</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/java.png" alt="java" class="icon"
+                                    onclick="location.href='https://www.java.com/en/'" />
+                            </dv>
+                            <div>
+                                <h3>JAVA</h3>
+                                <p>Intermediate</p>
+                            </div>
+                        </article>
+                        <article>
+                            <dv class="logo">
+                                <img src="./assets/c.png" alt="c" class="icon" />
+                            </dv>
                             <div>
                                 <h3>C</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/c++.png" alt="c++" class="icon" />
+                            </dv>
                             <div>
                                 <h3>C++</h3>
                                 <p>Basic</p>
-                            </div>
-                        </article>
-                        <article>
-                            <div>
-                                <h3>NodeJS</h3>
-                                <p>Experienced</p>
                             </div>
                         </article>
                     </div>
@@ -136,27 +147,50 @@
                     <h2 class="skills-sub-title">Other concepts</h2>
                     <div class="article-container">
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/data-structure.png" alt="data-structure" class="icon " />
+                            </dv>
                             <div>
                                 <h3>Data Structure</h3>
                                 <p>Experienced</p>
                             </div>
                         </article>
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/ai.png" alt="AI" class="icon" />
+                            </dv>
                             <div>
                                 <h3>AI</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/javascript.png" alt="Express JS" class="icon" />
+                            </dv>
                             <div>
                                 <h3>Express JS</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
+                            <dv class="logo">
+                                <img src="./assets/git.png" alt="git" class="icon"
+                                    onclick="location.href='https://git-scm.com/'" />
+                            </dv>
                             <div>
                                 <h3>Git</h3>
-                                <p>Intermediate</p>
+                                <p>Experienced</p>
+                            </div>
+                        </article>
+                        <article>
+                            <dv class="logo">
+                                <img src="./assets/mongodb.png" alt="mongodb" class="icon"
+                                    onclick="location.href='https://www.mongodb.com/'" />
+                            </dv>
+                            <div>
+                                <h3>MongoDB</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                     </div>
@@ -166,9 +200,22 @@
     </section>
     <!-- <div class="line"></div> -->
     <section id="projects">
-        <h1 class="title"># Current Projects</h1>
+        <h1 class="title">#Major Projects</h1>
         <div class="experience-details-container">
             <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/NLmodel.jpg" alt="Project 2" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">IntelliAi</h2>
+                    <p>Conversatioanl transformer model</p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/Mayura01/intelliAi'">
+                            Github
+                        </button>
+                    </div>
+                </div>
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img src="./assets/bitbliss.jpg" alt="Project 1" class="project-img" />
@@ -177,7 +224,7 @@
                     <p>A WebApp using NodeJS, MongoDB.</p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/Mayur68/BitBliss--WebApp-'">
+                            onclick="location.href='https://github.com/Mayura01/BitBliss--WebApp-'">
                             Github
                         </button>
                         <button class="btn btn-color-2 project-btn"
@@ -191,23 +238,9 @@
                         <img src="./assets/image0.jpg" alt="Project 1" class="project-img" />
                     </div>
                     <h2 class="experience-sub-title project-title">Machine Learning Models</h2>
-                    <p>Machine Learning Models</p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/Mayur68/Machine-learning-Models'">
-                            Github
-                        </button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/NLmodel.jpg" alt="Project 2" class="project-img" />
-                    </div>
-                    <h2 class="experience-sub-title project-title">Shape Recognition model</h2>
-                    <p>A simple NL model and a python server.</p>
-                    <div class="btn-container">
-                        <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/Mayur68/Shape-Recognition-model'">
+                            onclick="location.href='https://github.com/Mayura01/Machine-learning-Models'">
                             Github
                         </button>
                     </div>
