--- a/index.html
+++ b/index.html
@@ -160,17 +160,17 @@
                                 <img src="./assets/ai.png" alt="AI" class="icon" />
                             </dv>
                             <div>
-                                <h3>AI</h3>
+                                <h3>AI/ML</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
                         <article>
                             <dv class="logo">
-                                <img src="./assets/javascript.png" alt="Express JS" class="icon" />
+                                <img src="./assets/pytorch.png" alt="pytorch" class="icon" />
                             </dv>
                             <div>
-                                <h3>Express JS</h3>
-                                <p>Intermediate</p>
+                                <h3>PyTorch</h3>
+                                <p>Experienced</p>
                             </div>
                         </article>
                         <article>
