--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
                         </article>
                         <article>
                             <dv class="logo">
-                                <img src="./assets/pytorch.png" alt="pytorch" class="icon" />
+                                <img src="./assets/pytorch.png" alt="pytorch" class="icon"
+                                    onclick="location.href='https://pytorch.org/'" />
                             </dv>
                             <div>
                                 <h3>PyTorch</h3>
