--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Mayura</h1>
-            <p class="section__text__p2">I am currently a bachelor's student at Mangalore University.</p>
+            <p class="section__text__p2">I am currently a Master's student at Manipal University.</p>
             <div class="btn-container">
             </div>
             <div id="socials-container">
@@ -71,7 +71,7 @@
             <div class="about-details-container">
                 <div class="text-container">
                     <p>
-                        Hello! I'm Mayura, a passionate and dedicated BCA student with a keen interest
+                        Hello! I'm Mayura, a passionate and dedicated MCA student with a keen interest
                         in programming and technology. Ever since I wrote my first line of code, I've
                         been fascinated by the endless possibilities that technology offers in solving
                         real-world problems. I thrive on challenges and enjoy delving into complex
@@ -86,6 +86,8 @@
             </div>
         </div>
     </section>
+    <!-- <sectio
+      -->
     <!-- <div class="line"></div> -->
     <section id="skills">
         <h1 class="title">#Technologies I Know</h1>
