--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <h2>Mayura</h2>
         <ul class="navigation">
             <li><a href="#about">about</a></li>
-            <li><a href="#education">Education</a></li>
+            <!-- <li><a href="#education">Education</a></li> -->
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <div class="resume">Resume</div>
+            <div class="resume" onclick="window.open('./static/resume.pdf', '_blank')">Resume</div>
         </ul>
         <div class="toggle-mode">
             <i class="bi bi-brightness-high-fill" id="toggle-dark"></i>
@@ -38,7 +38,7 @@
             </div>
             <div class="menu-links">
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                <li><a href="#Education" onclick="toggleMenu()">Education</a></li>
+                <!-- <li><a href="#Education" onclick="toggleMenu()">Education</a></li> -->
                 <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
                 <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
@@ -54,7 +54,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Mayura</h1>
-            <p class="section__text__p2">I am currently a Master's student at Manipal University.</p>
+            <p class="section__text__p2">I am currently a Master's student at Manipal Institute Of technology.</p>
             <div class="btn-container">
             </div>
             <div id="socials-container">
