--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./style.css">
-    <title>Mayura</title>
+    <title>Mayura Patkar</title>
 </head>
 
 <body>
     <nav class="desktop">
-        <h2>Mayura</h2>
+        <h2>Mayura Patkar</h2>
         <ul class="navigation">
             <li><a href="#about">about</a></li>
             <!-- <li><a href="#education">Education</a></li> -->
@@ -53,7 +53,7 @@
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
-            <h1 class="title">Mayura</h1>
+            <h1 class="title">Mayura Patkar</h1>
             <p class="section__text__p2">I am currently a Master's student at Manipal Institute Of technology.</p>
             <div class="btn-container">
             </div>
@@ -71,16 +71,14 @@
             <div class="about-details-container">
                 <div class="text-container">
                     <p>
-                        Hello! I'm Mayura, a passionate and dedicated MCA student with a keen interest
-                        in programming and technology. Ever since I wrote my first line of code, I've
-                        been fascinated by the endless possibilities that technology offers in solving
-                        real-world problems. I thrive on challenges and enjoy delving into complex
-                        problems to find innovative solutions. As an aspiring programmer, I constantly
-                        seek opportunities to expand my knowledge and skills, whether through personal
-                        projects, academic coursework,or collaborative initiatives. Outside of
-                        coding, I enjoy exploring the latest tech trends, playing sports, and
-                        engaging in creative pursuits. I'm excited about the journey ahead and
-                        eager to contribute to the ever-evolving field of technology.
+                        <strong>Hi, I'm Mayura Patkar, an MCA student passionate about AI research and deep learning.</strong>
+                        <br>
+                        My interests lie in building transformer models, graph neural networks, and exploring
+                        cutting-edge AI techniques. I enjoy working on complex problems, from training language models
+                        to analyzing research trends with advanced machine learning methods. My goal is to push the
+                        boundaries of AI and contribute to its growing impact.
+                        <br>
+                        Excited about research, innovation, and the future of AI!
                     </p>
                 </div>
             </div>
@@ -117,16 +115,6 @@
                         </article>
                         <article>
                             <dv class="logo">
-                                <img src="./assets/java.png" alt="java" class="icon"
-                                    onclick="location.href='https://www.java.com/en/'" />
-                            </dv>
-                            <div>
-                                <h3>JAVA</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
                                 <img src="./assets/c.png" alt="c" class="icon" />
                             </dv>
                             <div>
@@ -140,7 +128,7 @@
                             </dv>
                             <div>
                                 <h3>C++</h3>
-                                <p>Basic</p>
+                                <p>Intermediate</p>
                             </div>
                         </article>
                     </div>
@@ -162,7 +150,7 @@
                                 <img src="./assets/ai.png" alt="AI" class="icon" />
                             </dv>
                             <div>
-                                <h3>AI/ML</h3>
+                                <h3>ML/Deep Learning</h3>
                                 <p>Intermediate</p>
                             </div>
                         </article>
@@ -210,25 +198,25 @@
                     <div class="article-container">
                         <img src="./assets/NLmodel.jpg" alt="Project 2" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">IntelliAi</h2>
-                    <p>Conversatioanl transformer model</p>
+                    <h2 class="experience-sub-title project-title">TCLM-2 language Model</h2>
+                    <p>Text-Generation model (transformer based)</p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/Mayura01/intelliAi'">
-                            Github
+                            onclick="location.href='https://huggingface.co/Mayura01/T-CLM2'">
+                            HuggingFace
                         </button>
                     </div>
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/bitbliss.jpg" alt="Project 1" class="project-img" />
+                        <img src="./assets/SSMS_logo.png" alt="Project 1" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">BitBliss - A Web App</h2>
-                    <p>A WebApp using NodeJS, MongoDB.</p>
+                    <h2 class="experience-sub-title project-title">Shresht Systems</h2>
+                    <p>A Website for Shresht Systems.</p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/Mayura01/BitBliss--WebApp-'">
-                            Github
+                            onclick="location.href='https://shreshtsystems.com'">
+                            Shreshth Systems
                         </button>
                     </div>
                 </div>
@@ -236,10 +224,11 @@
                     <div class="article-container">
                         <img src="./assets/image0.jpg" alt="Project 1" class="project-img" />
                     </div>
-                    <h2 class="experience-sub-title project-title">Machine Learning Models</h2>
+                    <h2 class="experience-sub-title project-title">Omniera</h2>
+                    <p>A fine-tunned Conversational AI (using TCLM-2 base model).</p>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/Mayura01/Machine-learning-Models'">
+                            onclick="location.href='https://github.com/MayuraPatkar/Omniera'">
                             Github
                         </button>
                     </div>
