--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img src="./assets/in1.png" alt="My LinkedIn profile" class="icon linkedin-dark-mode"
                     onclick="location.href='https://www.linkedin.com/in/mayura-patkar-14306a2b1/'" />
                 <img src="./assets/github.png" alt="My Github profile" class="icon github-dark-mode"
-                    onclick="location.href='https://github.com/Mayura01'" />
+                    onclick="location.href='https://github.com/MayuraPatkar'" />
             </div>
         </div>
     </section>
