--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
             </div>
         </div>
     </nav>
-    <div class="go-up" onclick="go_up()"><img src="./assets/angle-up-solid.svg" /></div>
     <section id="profile">
         <div class="frame">
-            <img src="./assets/mayur.png" loading="lazy" alt="Mayur's Profile Picture" />
+            <img src="./assets/mayura patkar.png" loading="lazy" alt="Mayura Patkar's Profile Picture" />
             <div class="shadow-overlay"></div>
         </div>
         <div class="section__text">
@@ -65,6 +64,7 @@
             </div>
         </div>
     </section>
+    <div class="go-up" onclick="go_up()"><img src="./assets/angle-up-solid.svg" /></div>
     <section id="about">
         <h1 class="title">#About Me</h1>
         <div class="section-container">
