--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./assets/mayura patkar.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./style.css">
+    <link rel ="stylesheet" href="./responsive.css">
     <title>Mayura Patkar</title>
 </head>
 
@@ -249,7 +250,7 @@
             </div>
             <div class="contact-info-container">
                 <img src="./assets/X1.png" alt="LinkedIn icon" class="icon contact-icon x-dark-mode" />
-                <p><a href="https://x.com/mayurpatkar68?t=x81TllvAZ9pmkAUm9z53ag&s=08">X</a></p>
+                <p><a href="https://x.com/mayurapatkar?t=x81TllvAZ9pmkAUm9z53ag&s=08">X</a></p>
             </div>
         </div>
     </section>
