--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./assets/mayura patkar.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="./style.css">
-    <link rel ="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./responsive.css">
     <title>Mayura Patkar</title>
 </head>
 
@@ -20,7 +20,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <div class="resume" onclick="window.open('./static/resume.pdf', '_blank')">Resume</div>
+            <div class="resume" onclick="window.open('./static/MayuraPatkar.pdf', '_blank')">Resume</div>
         </ul>
         <div class="toggle-mode">
             <i class="bi bi-brightness-high-fill" id="toggle-dark"></i>
@@ -72,7 +72,8 @@
             <div class="about-details-container">
                 <div class="text-container">
                     <p>
-                        <strong>Hi, I'm Mayura Patkar, an MCA student passionate about AI research and deep learning.</strong>
+                        <strong>Hi, I'm Mayura Patkar, an MCA student passionate about AI research and deep
+                            learning.</strong>
                         <br>
                         My interests lie in building transformer models, graph neural networks, and exploring
                         cutting-edge AI techniques. I enjoy working on complex problems, from training language models
