--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
-            <div class="resume" onclick="window.open('./static/MayuraPatkar.pdf', '_blank')">Resume</div>
+            <div class="resume" onclick="window.open('./static/Mayura Patkar.pdf', '_blank')">Resume</div>
         </ul>
         <div class="toggle-mode">
             <i class="bi bi-brightness-high-fill" id="toggle-dark"></i>
