Update assets and enhance index.html and style.css for improved skills section and project display

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./assets/mayura patkar.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./responsive.css">
     <title>Mayura Patkar</title>
@@ -54,7 +54,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Mayura Patkar</h1>
-            <p class="section__text__p2">I am currently a Master's student at Manipal Institute Of technology.</p>
+            <p class="section__text__p2">AI Researcher | Deep Learning Engineer | Specializing in Transformers & GNNs</p>
             <div class="btn-container">
             </div>
             <div id="socials-container">
@@ -72,7 +72,7 @@
             <div class="about-details-container">
                 <div class="text-container">
                     <p>
-                        <strong>Hi, I'm Mayura Patkar, an MCA student passionate about AI research and deep
+                        <strong>Hi, I'm Mayura Patkar, an MCA student at MIT Manipal, passionate about AI research and deep
                             learning.</strong>
                         <br>
                         My interests lie in building transformer models, graph neural networks, and exploring
@@ -90,112 +90,54 @@
       -->
     <!-- <div class="line"></div> -->
     <section id="skills">
-        <h1 class="title">#Technologies I Know</h1>
-        <div class="skills-details-container">
-            <div class="about-containers">
-                <div class="details-container">
-                    <h2 class="skills-sub-title">Programming Languages</h2>
-                    <div class="article-container">
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/python-logo.png" alt="python" class="icon"
-                                    onclick="location.href='https://www.python.org/'" />
-                            </dv>
-                            <div>
-                                <h3>Python</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/javascript.png" alt="javascript" class="icon" />
-                            </dv>
-                            <div>
-                                <h3>JavaScript</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/c.png" alt="c" class="icon" />
-                            </dv>
-                            <div>
-                                <h3>C</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/c++.png" alt="c++" class="icon" />
-                            </dv>
-                            <div>
-                                <h3>C++</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-                <div class="details-container">
-                    <h2 class="skills-sub-title">Other concepts</h2>
-                    <div class="article-container">
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/data-structure.png" alt="data-structure" class="icon " />
-                            </dv>
-                            <div>
-                                <h3>Data Structure</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/ai.png" alt="AI" class="icon" />
-                            </dv>
-                            <div>
-                                <h3>ML/Deep Learning</h3>
-                                <p>Intermediate</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/pytorch.png" alt="pytorch" class="icon"
-                                    onclick="location.href='https://pytorch.org/'" />
-                            </dv>
-                            <div>
-                                <h3>PyTorch</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/git.png" alt="git" class="icon"
-                                    onclick="location.href='https://git-scm.com/'" />
-                            </dv>
-                            <div>
-                                <h3>Git</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                        <article>
-                            <dv class="logo">
-                                <img src="./assets/mongodb.png" alt="mongodb" class="icon"
-                                    onclick="location.href='https://www.mongodb.com/'" />
-                            </dv>
-                            <div>
-                                <h3>MongoDB</h3>
-                                <p>Experienced</p>
-                            </div>
-                        </article>
-                    </div>
-                </div>
+        <h1 class="title">#Skills & Expertise</h1>
+        <div class="skills-grid">
+
+            <div class="skill-card ai">
+                <i class="fas fa-brain skill-icon"></i>
+                <h3>Core AI/ML</h3>
+                <p>Transformers, GNNs, LLMs, Community Detection, Concept Drift</p>
             </div>
+
+            <div class="skill-card dl">
+                <i class="fas fa-robot skill-icon"></i>
+                <h3>Deep Learning Frameworks</h3>
+                <p>PyTorch, Hugging Face, TensorFlow (basic)</p>
+            </div>
+
+            <div class="skill-card prog">
+                <i class="fab fa-python skill-icon"></i>
+                <h3>Programming</h3>
+                <p>Python, JavaScript, Shell scripting, C (basics)</p>
+            </div>
+
+            <div class="skill-card data">
+                <i class="fas fa-database skill-icon"></i>
+                <h3>Data Science</h3>
+                <p>Data preprocessing, Feature engineering, Visualization, Statistical Analysis</p>
+            </div>
+
+            <div class="skill-card db">
+                <i class="fas fa-server skill-icon"></i>
+                <h3>Databases</h3>
+                <p>MongoDB, SQL, Graph Databases (Neo4j basics)</p>
+            </div>
+
+            <div class="skill-card tools">
+                <i class="fas fa-tools skill-icon"></i>
+                <h3>Tools & Workflow</h3>
+                <p>Git/GitHub, Linux, Docker (basic), VS Code, Jupyter</p>
+            </div>
+
         </div>
     </section>
+
+
     <!-- <div class="line"></div> -->
     <section id="projects">
         <h1 class="title">#Major Projects</h1>
         <div class="experience-details-container">
-            <div class="about-containers">
+            <div class="projects-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img src="./assets/NLmodel.jpg" alt="Project 2" class="project-img" />
@@ -207,18 +149,9 @@
                             onclick="location.href='https://huggingface.co/Mayura01/T-CLM2'">
                             HuggingFace
                         </button>
-                    </div>
-                </div>
-                <div class="details-container color-container">
-                    <div class="article-container">
-                        <img src="./assets/SSMS_logo.png" alt="Project 1" class="project-img" />
-                    </div>
-                    <h2 class="experience-sub-title project-title">Shresht Systems</h2>
-                    <p>A Website for Shresht Systems.</p>
-                    <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://shreshtsystems.com'">
-                            Shreshth Systems
+                            onclick="location.href='https://github.com/MayuraPatkar/TCLM2.git'">
+                            GitHub
                         </button>
                     </div>
                 </div>
@@ -235,6 +168,34 @@
                         </button>
                     </div>
                 </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/SSMS_logo.png" alt="Project 1" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Shresht Systems</h2>
+                    <p>A Website for Shresht Systems.</p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://shreshtsystems.com'">
+                            Shreshth Systems
+                        </button>
+                    </div>
+                </div>
+
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/SSMS_logo2.png" alt="Project 1" class="project-img" />
+                    </div>
+                    <h2 class="experience-sub-title project-title">Shresht Systems Management System</h2>
+                    <p>Company Management Software (Team Project)</p>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"
+                            onclick="location.href='https://github.com/MayuraPatkar/Shresht-Systems_Management-System.git'">
+                            Github
+                        </button>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -243,7 +204,7 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/mail.png" alt="Email icon" class="icon contact-icon email-icon email-dark-mode" />
-                <p><a href="mailto:mayurpatkar68@gmaul.com">mayurpatkar68@gmail.com</a></p>
+                <p><a href="mailto:mayurpatkar68@gmail.com">mayurpatkar68@gmail.com</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/in1.png" alt="LinkedIn icon" class="icon contact-icon linkedin2-dark-mode" />
