Replace PNG image with JPG for bio section and update image source in index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <div class="panel-body split-layout">
                             <div class="bio-image">
                                 <div class="img-frame">
-                                    <img src="./assets/mayura patkar.png" alt="Mayura Patkar">
+                                    <img src="./assets/mayura patkar.jpg" alt="Mayura Patkar">
                                     <div class="scan-line"></div>
                                 </div>
                                 <div class="bio-stats">
